gccida/g1/ix86_split_to_parts
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9042:52: error: must use 'enum' tag to refer to type 'machine_mode'
int  ix86_split_to_parts( rtx operand, rtx *parts, machine_mode mode) 
                                                   ^
                                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9056:4: error: expected ';' after expression
rtx operanda; // [rsp+8h] [rbp-60h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9056:5: error: use of undeclared identifier 'operanda'; did you mean 'operand'?
rtx operanda; // [rsp+8h] [rbp-60h] BYREF 
    ^~~~~~~~
    operand
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9042:31: note: 'operand' declared here
int  ix86_split_to_parts( rtx operand, rtx *parts, machine_mode mode) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9058:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+30h] [rbp-38h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9060:1: error: use of undeclared identifier 'operanda'; did you mean 'operand'?
operanda = operand; 
^~~~~~~~
operand
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9042:31: note: 'operand' declared here
int  ix86_split_to_parts( rtx operand, rtx *parts, machine_mode mode) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9069:6: error: use of undeclared identifier 'operanda'; did you mean 'operand'?
v5 = operanda; 
     ^~~~~~~~
     operand
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9042:31: note: 'operand' declared here
int  ix86_split_to_parts( rtx operand, rtx *parts, machine_mode mode) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9070:17: error: use of undeclared identifier 'operanda'
if ( *( _WORD *)operanda != 61 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9073:17: error: use of undeclared identifier 'operanda'
if ( *( _WORD *)operanda != 66 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9081:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 8593, "ix86_split_to_parts"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9085:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 8595, "ix86_split_to_parts"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9089:6: error: use of undeclared identifier 'operanda'; did you mean 'operand'?
v5 = operanda; 
     ^~~~~~~~
     operand
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9042:31: note: 'operand' declared here
int  ix86_split_to_parts( rtx operand, rtx *parts, machine_mode mode) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9090:17: error: use of undeclared identifier 'operanda'
if ( *( _WORD *)operanda == 61 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9094:17: error: use of undeclared identifier 'operanda'
if ( *( _WORD *)operanda == 66 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9098:23: error: expected identifier or '('
 struct pool_constant = operanda; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9100:28: error: expected ')'
|| (  struct pool_constant = get_pool_constant( rtx), operanda = pool_constant, *( _WORD *)pool_constant == 66) ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9100:4: note: to match this '('
|| (  struct pool_constant = get_pool_constant( rtx), operanda = pool_constant, *( _WORD *)pool_constant == 66) ) 
   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9100:113: error: expected expression
|| (  struct pool_constant = get_pool_constant( rtx), operanda = pool_constant, *( _WORD *)pool_constant == 66) ) 
                                                                                                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9104:21: error: use of undeclared identifier 'operanda'; did you mean 'operand'?
if ( !push_operand( operanda, VOIDmode) ) 
                    ^~~~~~~~
                    operand
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9042:31: note: 'operand' declared here
int  ix86_split_to_parts( rtx operand, rtx *parts, machine_mode mode) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9105:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 8609, "ix86_split_to_parts"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9106:1: error: use of undeclared identifier 'operanda'; did you mean 'operand'?
operanda = copy_rtx( operanda); 
^~~~~~~~
operand
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/i386.c:9042:31: note: 'operand' declared here
int  ix86_split_to_parts( rtx operand, rtx *parts, machine_mode mode) 
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_split_to_parts/src/obj/i386.o] Error 1
